@@ -1,5 +1,14 @@
 2008-01-18  Ross Burton  <ross@burtonini.com>
 
+	* data/sound-juicer.glade:
+	* libjuicer/sj-structures.h:
+	* libjuicer/sj-extractor.c:
+	* src/sj-extracting.c:
+	* src/sj-main.c:
+	Add a Disc Number field (#136514, thanks Matthew Martin).
+
+2008-01-18  Ross Burton  <ross@burtonini.com>
+
 	* data/sound-juicer.desktop.in.in:
 	Add Audio CD content/* type (#510322, thanks Matthias Clasen).
 
